--- a/salons/demo/manifest.json
+++ b/salons/demo/manifest.json
@@ -10,8 +10,8 @@
   },
   "logoSrc": "/salons/demo/logo.png",
   "ad": {
-    "title": "Boulangerie du coin",
-    "text": "Formule midi à 8,90 €",
+    "title": "Votre torrefacteur artisanal",
+    "text": "Votre spécialiste du café et du thé",
     "mediaType": "image",
     "src": "/salons/demo/pub.png"
   },
