--- a/salons/demo/manifest.json
+++ b/salons/demo/manifest.json
@@ -10,8 +10,8 @@
   },
   "logoSrc": "/salons/demo/logo.png",
   "ad": {
-    "title": "Votre torrefacteur artisanal",
-    "text": "Votre spécialiste du café et du thé",
+    "title": "Torrefacteur artisanal",
+    "text": "Votre spécialiste du café et du thé a Châtillon",
     "mediaType": "image",
     "src": "/salons/demo/pub.png"
   },
